[gd_scene load_steps=4 format=3 uid="uid://cxv6ps3wfo0nu"]

[ext_resource type="Script" path="res://spells/scenes/proj_spread/bullet.gd" id="1_8b4ye"]
[ext_resource type="Texture2D" uid="uid://qssovmkgqvgv" path="res://spells/scenes/explosive/81310-orange-art-explosion-sprite-pixel-download-hq-png.png" id="1_jdm3x"]

[sub_resource type="CircleShape2D" id="CircleShape2D_3twl3"]
radius = 25.0799

[node name="Bullet" type="Area2D"]
collision_layer = 16
script = ExtResource("1_8b4ye")
speed = 3.0

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.2, 0.2)
texture = ExtResource("1_jdm3x")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_3twl3")

[node name="kill_timer" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="kill_timer" to="." method="_on_kill_timer_timeout"]
